// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputAdornment should match snapshot 1`] = `
<div>
  <div
    class="MuiInputAdornment-root MuiInputAdornment-positionStart css-ittuaa-MuiInputAdornment-root"
  >
    <span
      class="notranslate"
    >
      ​
    </span>
    InputAdornment
  </div>
</div>
`;

exports[`InputAdornment should match snapshot 2`] = `
<div>
  <div
    class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
  >
    InputAdornment
  </div>
</div>
`;
